Configuration to generate the image of the project

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -3,5 +3,12 @@ spring:
     name: discovery
   cloud:
     config:
-      uri: http://localhost:5000
-      label: master
+      uri: http://localhost:8888
+      fail-fast: true
+
+---
+spring:
+  profiles: docker
+  cloud:
+    config:
+      uri: http://config:8888
