--- a/src/test/resources/bootstrap.yml
+++ b/src/test/resources/bootstrap.yml
@@ -1,3 +1,10 @@
+spring:
+  application:
+    name: discovery
+  cloud:
+    config:
+      enable: false
+
 eureka:
   client:
     registerWithEureka: false
